# kiris

./: .gitignore  README.md  pyproject.toml  run  verify.py
beam_analysis/: beam.py  cli.py  engine.py  loads.py  plotter.py  solver.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/beam_analysis_mvp_20251223/: metadata.json  plan.md  spec.md
tests/: test_beam.py  test_cantilever.py  test_cli.py  test_engine.py  test_indeterminate.py  test_loads.py  test_overhanging.py  test_reporter.py
